# coin

./: .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml
backend/coin/: Cargo.toml
backend/coin-core/: Cargo.toml
backend/coin/src/: main.rs
frontend/coin-cli/: Cargo.toml
frontend/coin-cli/src/: main.rs
frontend/coin-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/coin-tauri/coin-web-ui/: README.md
frontend/coin-tauri/src/: main.rs
frontend/coin-web/: Cargo.toml  index.html  package-lock.json
frontend/coin-web-ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/coin-web/src/: main.rs
frontend/coin-web/src/lib/: coin_core.d.ts  coin_core.js  coin_core_bg.wasm.d.ts  index.ts  package.json
frontend/coin-web/src/routes/: +page.svelte
lib/coin-core/: Cargo.toml
lib/coin-core/src/: auth.rs  currency.rs  db.rs  error.rs  errors.rs  expense.rs  lib.rs  oauth.rs  utils.rs
lib/coin-core/src/oauth/: google.rs  mod.rs
lib/github-device-oauth/: Cargo.toml
lib/github-device-oauth/examples/: simple.rs
lib/github-device-oauth/src/: lib.rs
