cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [ 
  "frontend/coin-tauri", 
  "frontend/coin-cli",
  "lib/*"
]

[workspace.package]
authors = [ "Pedro Burgos <druskus20@gmail.com>" ]
categories = ["finance","expenses"]
keywords = ["expense"]
homepage = "https://github.com/druskus20/coin"
repository = "https://github.com/druskus20/coin"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
coin-core = { path = "lib/coin-core", version = "0.1" }
futures = "0.3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"]}
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "1.3", features = ["kv-mem"] }
chrono = "0.4"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.release]
strip = true
lto = true
codegen-units = 1


