cargo-features = ["codegen-backend", "per-package-target"]

[workspace]
resolver = "2"
members = [ 
  "frontend/coin-tauri", 
  "frontend/coin-cli",
  "lib/*"
]

[workspace.package]
authors = [ "Pedro Burgos <druskus20@gmail.com>" ]
categories = ["finance","expenses"]
keywords = ["expense"]
homepage = "https://github.com/druskus20/coin"
repository = "https://github.com/druskus20/coin"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
coin-core = { path = "lib/coin-core", version = "0.1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = { version = "1.3" }
chrono = "0.4"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
#futures = "0.3"
tokio = { version = "1.37"}
web-sys = { version = "0.3.69", features = ['console'] }


[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
