cargo-features = ["codegen-backend", "per-package-target"]

[workspace]
resolver = "2"
members = [ 
  "frontend/coin-tauri", 
  "frontend/coin-cli",
  "frontend/coin-web",
  "lib/*"]

[workspace.package]
authors = [ "Pedro Burgos <druskus20@gmail.com>" ]
homepage = "https://github.com/druskus20/coin"
repository = "https://github.com/druskus20/coin"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
# Wasm stuff
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ['console'] }
tokio = { version = "1.38"}

thiserror = "1.0"

# Coin 
coin-core = { path = "lib/coin-core", version = "0.1" }

[profile.dev]
opt-level = 1 # Fast compile times

[profile.release]
opt-level = "z" # Size
strip = true
lto = true
codegen-units = 1
panic = "abort"

#[profile.release.package.wry]
#debug = true
#debug-assertions = true
