cargo-features = ["codegen-backend", "per-package-target"]

[package]
name = "coin-cli"
version = "0.1.0"
authors = [ "Pedro Burgos <druskus20@gmail.com>" ]
categories = ["finance","expenses"]
keywords = ["expense"]
homepage = "https://github.com/druskus20/coin"
repository = "https://github.com/druskus20/coin"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77"

#default-target = "wasm32-unknown-unknown"
default-target = "x86_64-unknown-linux-gnu"
[dependencies]
coin-core.workspace = true
# We can use the rt-multi-thread feature since we are compiling natively
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]}


#thiserror = "1.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.115"
#surrealdb = { version = "1.3", features = ["kv-mem"] }
#chrono = "0.4"
#wasm-bindgen = "0.2.92"
#wasm-bindgen-futures = "0.4.42"
##futures = "0.3"
#web-sys = { version = "0.3.69", features = ['console'] }
