cargo-features = ["codegen-backend", "per-package-target"]

[package]
name = "coin-cli"
version = "0.1.0"
authors = [ "Pedro Burgos <druskus20@gmail.com>" ]
homepage = "https://github.com/druskus20/coin"
repository = "https://github.com/druskus20/coin"
license = "Apache-2.0 OR MIT"
edition = "2021"
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
coin-core.workspace = true

# We can use the rt-multi-thread feature since we are compiling natively
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]}
