[package]
name = "coin-tauri"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tauri = { version = "1.6.1", features = [] }

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "coin_tauri"
path = "src/lib.rs"

[[bin]]
name = "coin-tauri"
path = "src/main.rs"
