cargo-features = ["codegen-backend", "per-package-target"]

[package]
name = "coin-web"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coin-core.workspace = true
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
log = "0.4.21"
