[package]
name = "coin-core"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

firebase-rs = { git = "https://github.com/druskus20/firebase-rs", branch = "public-errors"}
github-device-flow = "0.2.0"

#firebase-rs = { git = "https://github.com/druskus20/firebase-rs", rev = "7eb97ba5af9c228276d43ff6a77ef51df380eda8" }

[lib]
crate-type = ["cdylib", "rlib"]
