[package]
name = "coin-core"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

#firebase-rs = { git = "https://github.com/druskus20/firebase-rs", branch = "public-response" }
firestore = "0.42.0"
github-device-oauth = { git ="https://github.com/druskus20/github-device-oauth", branch = "master" }
keyring = { version = "2.3.3", default-features = false, features = ["platform-linux", "byteorder", "linux-secret-service-rt-tokio-crypto-rust" ]}
whoami = "1.5.1"
gcloud-sdk = "0.24.8"
firestore-db-and-auth = "0.8.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "hyper-rustls"] }
async-trait = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
