[package]
name = "github-device-oauth"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
use = "0.0.1-pre.0"
